--- a/lesson_14/index.html
+++ b/lesson_14/index.html
@@ -74,7 +74,10 @@
                   </div>
                   <h5>Каталог</h5>
                </a>
-               <div class="middle-header__search">Пошук товарів</div>
+               <form action="#" class="middle-header__search">
+                  <input placeholder="Пошук товарів" type="search">
+                  <button type="submit"></button>
+               </form>
                <div class="middle-header__hotline hotline-middle-header">
                   <a href="" class="hotline-middle-header__call">
                      <img src="img/small-icons/call.svg" alt="call">
